Add missing file
git-svn-id: svn+ssh://os.inf.tu-dresden.de/srv/svn/repos/tudos/branches/private/l4_fiasco_devel@41996 f14d51d3-0326-0410-b585-9ada3f04f940

--- a/lib-acpi/src/Makefile
+++ b/lib-acpi/src/Makefile
@@ -73,6 +73,7 @@ ACPICA_SRC_C		= \
 	hardware/hwpci.c \
 	hardware/hwregs.c \
 	hardware/hwsleep.c \
+	hardware/hwesleep.c \
 	hardware/hwvalid.c \
 	hardware/hwxface.c \
 	namespace/nsaccess.c \
