[ACPICA] Add missing files to compile
Add files needed for GPE and suspend/resume handling.

git-svn-id: svn+ssh://os.inf.tu-dresden.de/srv/svn/repos/tudos/branches/private/l4_fiasco_devel@42801 f14d51d3-0326-0410-b585-9ada3f04f940

--- a/lib-acpi/src/Makefile
+++ b/lib-acpi/src/Makefile
@@ -43,6 +43,7 @@ ACPICA_SRC_C		= \
 	events/evsci.c \
 	events/evxface.c \
 	events/evxfevnt.c \
+	events/evxfgpe.c \
 	events/evxfregn.c \
 	executer/exconfig.c \
 	executer/exconvrt.c \
@@ -76,6 +77,7 @@ ACPICA_SRC_C		= \
 	hardware/hwesleep.c \
 	hardware/hwvalid.c \
 	hardware/hwxface.c \
+	hardware/hwxfsleep.c \
 	namespace/nsaccess.c \
 	namespace/nsalloc.c \
 	namespace/nsdump.c \
