apply -Wno-unterminated-string-initialization if available
The acpica package makes extensive use of writing C strings of length
4+1 into a 'char' of a size of 4. Disable the corresponding gcc-15
warning for now.

Change-Id: I18f613b23c8369877f39bf199d22125f1a920ac4
Requires-Change-Id: I974f7a975ce7a0949965d425a1477ac8fde1f678

--- a/lib-acpi/src/Makefile
+++ b/lib-acpi/src/Makefile
@@ -193,6 +193,7 @@ DEFINES += -DL4_ACPICA
 include $(L4DIR)/mk/lib.mk
 
 WARNINGS += -Wno-unused-parameter -Wno-null-pointer-subtraction
+WARNINGS += $(GCCWNOUNTERMINATEDSTRINGINITIALIZATION)
 
 main.o: dsdt-static.hex
 vpath dsdt-static.dsl $(PKGDIR)/server/lib-acpi/src/
