Define L4_ACPICA for the PC file
Such that all users of the lib use the proper define.

Signed-off-by: Adam Lackorzynski <adam@l4re.org>

Change-Id: Ie260e4771bc58595ab666b24de54457e0257211d

--- a/lib-acpi/src/Makefile
+++ b/lib-acpi/src/Makefile
@@ -188,7 +188,8 @@ SRC_C := $(addprefix acpica/components/,$(ACPICA_SRC_C))
 SRC_C += osl-stdio.c debug.c
 SRC_CC+= osl-basic.cc
 
-DEFINES += -DL4_ACPICA
+PC_CFLAGS += -DL4_ACPICA
+DEFINES   += -DL4_ACPICA
 
 include $(L4DIR)/mk/lib.mk
 
